--- a/src/Components/Header/User.scss
+++ b/src/Components/Header/User.scss
@@ -7,4 +7,11 @@
     height: 40px;
     margin-left: 0.5rem;
   }
+  ion-icon {
+    font-size: 2.2rem;
+    padding-top: 3px;
+  }
+  .menu {
+    display: none;
+  }
 }
