--- a/src/Pages/Home/Hero.scss
+++ b/src/Pages/Home/Hero.scss
@@ -1,17 +1,17 @@
 .hero {
   grid-column: 2/-2;
   margin: 0 auto;
-  width: 1100px;
+  width: 100%;
   overflow: hidden;
 
   .slider {
     display: flex;
-    width: 5500px;
+    width: 500%;
     animation: slide 30s ease-in-out infinite alternate forwards;
     -webkit-animation: slide 30s ease-in-out infinite alternate forwards;
     div {
       height: 500px;
-      width: 1100px;
+      width: 20%;
       background-position: center;
       background-size: cover;
     }
@@ -48,59 +48,59 @@
     -o-transform: translateX(0px);
   }
   22% {
-    transform: translateX(-1100px);
-    -webkit-transform: translateX(-1100px);
-    -moz-transform: translateX(-1100px);
-    -ms-transform: translateX(-1100px);
-    -o-transform: translateX(-1100px);
+    transform: translateX(-20%);
+    -webkit-transform: translateX(-20%);
+    -moz-transform: translateX(-20%);
+    -ms-transform: translateX(-20%);
+    -o-transform: translateX(-20%);
   }
   40% {
-    transform: translateX(-1100px);
-    -webkit-transform: translateX(-1100px);
-    -moz-transform: translateX(-1100px);
-    -ms-transform: translateX(-1100px);
-    -o-transform: translateX(-1100px);
+    transform: translateX(-20%);
+    -webkit-transform: translateX(-20%);
+    -moz-transform: translateX(-20%);
+    -ms-transform: translateX(-20%);
+    -o-transform: translateX(-20%);
   }
   42% {
-    transform: translateX(-2200px);
-    -webkit-transform: translateX(-2200px);
-    -moz-transform: translateX(-2200px);
-    -ms-transform: translateX(-2200px);
-    -o-transform: translateX(-2200px);
+    transform: translateX(-40%);
+    -webkit-transform: translateX(-40%);
+    -moz-transform: translateX(-40%);
+    -ms-transform: translateX(-40%);
+    -o-transform: translateX(-40%);
   }
   60% {
-    transform: translateX(-2200px);
-    -webkit-transform: translateX(-2200px);
-    -moz-transform: translateX(-2200px);
-    -ms-transform: translateX(-2200px);
-    -o-transform: translateX(-2200px);
+    transform: translateX(-40%);
+    -webkit-transform: translateX(-40%);
+    -moz-transform: translateX(-40%);
+    -ms-transform: translateX(-40%);
+    -o-transform: translateX(-40%);
   }
   62% {
-    transform: translateX(-3300px);
-    -webkit-transform: translateX(-3300px);
-    -moz-transform: translateX(-3300px);
-    -ms-transform: translateX(-3300px);
-    -o-transform: translateX(-3300px);
+    transform: translateX(-60%);
+    -webkit-transform: translateX(-60%);
+    -moz-transform: translateX(-60%);
+    -ms-transform: translateX(-60%);
+    -o-transform: translateX(-60%);
   }
   80% {
-    transform: translateX(-3300px);
-    -webkit-transform: translateX(-3300px);
-    -moz-transform: translateX(-3300px);
-    -ms-transform: translateX(-3300px);
-    -o-transform: translateX(-3300px);
+    transform: translateX(-60%);
+    -webkit-transform: translateX(-60%);
+    -moz-transform: translateX(-60%);
+    -ms-transform: translateX(-60%);
+    -o-transform: translateX(-60%);
   }
   82% {
-    transform: translateX(-4400px);
-    -webkit-transform: translateX(-4400px);
-    -moz-transform: translateX(-4400px);
-    -ms-transform: translateX(-4400px);
-    -o-transform: translateX(-4400px);
+    transform: translateX(-80%);
+    -webkit-transform: translateX(-80%);
+    -moz-transform: translateX(-80%);
+    -ms-transform: translateX(-80%);
+    -o-transform: translateX(-80%);
   }
   100% {
-    transform: translateX(-4400px);
-    -webkit-transform: translateX(-4400px);
-    -moz-transform: translateX(-4400px);
-    -ms-transform: translateX(-4400px);
-    -o-transform: translateX(-4400px);
+    transform: translateX(-80%);
+    -webkit-transform: translateX(-80%);
+    -moz-transform: translateX(-80%);
+    -ms-transform: translateX(-80%);
+    -o-transform: translateX(-80%);
   }
 }
